<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:orientation="vertical">
 	<TextView
 	    android:id="@+id/txt_no_supplies_found"
	 	android:layout_width="match_parent"
	 	android:layout_height="wrap_content"
	 	android:visibility="visible"
	 	android:text="@string/msg_no_supplies_found"
	 	android:textAppearance="@style/TextAppearance.CustomFont.Semilight"
	 	android:textSize="18sp"
	 	android:textColor="@color/gray_contrast_color"/>

 	<LinearLayout
 	    android:id="@+id/layout_waiting_search"
 	    android:visibility="gone"
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
 	    android:layout_marginTop="15dp"
 	    android:gravity="center_horizontal|top"
 	    android:orientation="vertical" >
 	    
		<com.alertdialogpro.material.ProgressBarCompat
		    android:layout_width="65dp"
		    android:layout_height="65dp"/>
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/msg_searching"
		    android:textAppearance="@style/TextAppearance.CustomFont.Semilight"
		 	android:textSize="18sp"
		 	android:textColor="@color/gray_contrast_color"
		    android:layout_marginTop="5dp"/>
	</LinearLayout>
 	<RelativeLayout
 	    android:id="@+id/layout_supply_info"
 	    android:visibility="gone"
	    android:layout_width="match_parent"
	 	android:layout_height="match_parent">
	<LinearLayout 
	    android:id="@+id/client_info"
    	android:layout_width="match_parent"
   	 	android:layout_height="wrap_content"
   	 	android:layout_alignParentTop="true"
   	 	android:layout_alignParentRight="true"
   	 	android:layout_alignParentEnd="true"
   	 	android:layout_alignParentLeft="true"
   	 	android:layout_alignParentStart="true"
   	 	android:orientation="vertical" >
    	
	    <TextView
	        android:id="@+id/txt_client_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:drawableLeft="@drawable/client"
	        android:drawableStart="@drawable/client"
	        android:gravity="center_vertical"
	        android:text="@string/sample_name"
	        android:textIsSelectable="true"
	        android:textAppearance="@style/TextAppearance.CustomFont.Semilight"
	        android:textSize="18sp" />
	
	    <TextView
	        android:id="@+id/txt_nus"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:drawableLeft="@drawable/nus_blue"
	        android:drawableStart="@drawable/nus_blue"
	        android:gravity="center_vertical"
	        android:text="@string/sample_nus"
	        android:textAppearance="@style/TextAppearance.CustomFont.Semilight"
	        android:textIsSelectable="true"
	        android:textSize="16sp" />
	
	    <TextView
	        android:id="@+id/txt_account_number"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:drawableLeft="@drawable/account_number"
	        android:drawableStart="@drawable/account_number"
	        android:gravity="center_vertical"
	        android:text="@string/sample_account_number"
	        android:textAppearance="@style/TextAppearance.CustomFont.Semilight"
	        android:textIsSelectable="true"
	        android:textSize="16sp" />
	
	    <TextView
	        android:id="@+id/txt_client_address"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:drawableLeft="@drawable/client_address"
	        android:drawableStart="@drawable/client_address"
	        android:gravity="center_vertical"
	        android:text="@string/sample_address"
	        android:textAppearance="@style/TextAppearance.CustomFont.Semilight"
	        android:textIsSelectable="true"
	        android:textSize="16sp" />
	</LinearLayout>
	<TextView 
	    android:id="@+id/lbl_receipt_list_type"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/client_info"
	    android:text="@string/lbl_pending_receipt_list_title"
	    android:textAppearance="@style/TextAppearance.CustomFont.Semilight"
	    android:layout_marginTop="3dp"
	    android:layout_marginLeft="3dp"
	    android:layout_marginStart="3dp"
	    android:textSize="14sp"
	    />
    <ListView
        android:id="@+id/list_receipts"
        android:layout_below="@+id/lbl_receipt_list_type"
        android:layout_above="@+id/btn_action"
        android:layout_width="match_parent"
        android:choiceMode="multipleChoice"
        android:layout_height="wrap_content"
        android:smoothScrollbar="true"
        android:fastScrollEnabled="true"/>

    <Button
        android:id="@+id/btn_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
   	 	android:layout_alignParentEnd="true"
   	 	android:layout_alignParentLeft="true"
   	 	android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/btn_collect" />

	</RelativeLayout>
</LinearLayout>