<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:cobranza="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.elfec.cobranza.view.MainMenu" >
	<com.elfec.cobranza.view.controls.SquareButton
		            cobranza:buttonIcon="@drawable/collection_selector"
		            cobranza:buttonText="@string/btn_collection"
		            android:layout_width="match_parent"
	        		android:layout_weight="0.33"
	        		android:onClick="btnCollectionClick"
		            android:layout_height="0dp" />
	<View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/btn_pressed_gray" />
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="0.33"
	    android:orientation="horizontal">
	    	<com.elfec.cobranza.view.controls.SquareButton
	            cobranza:buttonIcon="@drawable/collection_details_selector"
	            cobranza:buttonText="@string/btn_details_report"
	            android:layout_width="0dp"
        		android:layout_weight="0.5"
        		android:onClick="btnCollectionClick"
	            android:layout_height="match_parent" />
	    	<View
		        android:layout_width="1dp"
		        android:layout_height="match_parent"
		        android:layout_gravity="center_horizontal"
		        android:background="@color/btn_pressed_gray" />
	    	<com.elfec.cobranza.view.controls.SquareButton
	            cobranza:buttonIcon="@drawable/annuleds_report_selector"
	            cobranza:buttonText="@string/btn_annuleds_report"
	            android:layout_width="0dp"
        		android:layout_weight="0.5"
        		android:onClick="btnCollectionClick"
	            android:layout_height="match_parent" />
	</LinearLayout>
	<View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/btn_pressed_gray" />
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="0.33"
	    android:orientation="horizontal">
	    	<com.elfec.cobranza.view.controls.SquareButton
	            cobranza:buttonIcon="@drawable/daily_summary_selector"
	            cobranza:buttonText="@string/btn_daily_summary"
	            android:layout_width="0dp"
        		android:layout_weight="0.5"
        		android:onClick="btnCollectionClick"
	            android:layout_height="match_parent" />
	    	<View
		        android:layout_width="1dp"
		        android:layout_height="match_parent"
		        android:layout_gravity="center_horizontal"
		        android:background="@color/btn_pressed_gray" />
	    	<com.elfec.cobranza.view.controls.SquareButton
	            cobranza:buttonIcon="@drawable/cashdesk_summary_selector"
	            cobranza:buttonText="@string/btn_cashdesk_summary"
	            android:layout_width="0dp"
        		android:layout_weight="0.5"
        		android:onClick="btnCollectionClick"
	            android:layout_height="match_parent" />	    
	</LinearLayout>
</LinearLayout>
