<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp"
    android:background="@drawable/bluetooth_device_list_item_background"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="@integer/list_item_orientation">    
   		<TextView
	        android:id="@+id/txt_client_name"
	        android:layout_width="280dp"
	        android:layout_height="wrap_content"
	        android:drawableLeft="@drawable/client"
	        android:drawableStart="@drawable/client"
	        android:gravity="center_vertical"
	        android:text="@string/sample_name"
	        android:textAppearance="@style/TextAppearance.CustomFont.Semilight"
	        android:textSize="18sp" />
	
	    <TextView
	        android:id="@+id/txt_nus"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:drawableLeft="@drawable/nus_blue"
	        android:drawableStart="@drawable/nus_blue"
	        android:gravity="center_vertical"
	        android:text="@string/sample_nus"
	        android:layout_marginLeft="@dimen/list_item_left_margin"
		    android:layout_marginStart="@dimen/list_item_left_margin"
	        android:textAppearance="@style/TextAppearance.CustomFont.Semilight"
	        android:textSize="16sp" />
	 </LinearLayout>
	 <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="@integer/list_item_orientation">    
	    <TextView
	        android:id="@+id/txt_account_number"
	        android:layout_width="280dp"
	        android:layout_height="wrap_content"
	        android:drawableLeft="@drawable/account_number"
	        android:drawableStart="@drawable/account_number"
	        android:gravity="center_vertical"
	        android:text="@string/sample_account_number"
	        android:textAppearance="@style/TextAppearance.CustomFont.Semilight"
	        android:textSize="16sp" />
	
	    <TextView
	        android:id="@+id/txt_client_address"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:drawableLeft="@drawable/client_address"
	        android:drawableStart="@drawable/client_address"
	        android:gravity="center_vertical"
	        android:text="@string/sample_address"
	        android:layout_marginLeft="@dimen/list_item_left_margin"
		    android:layout_marginStart="@dimen/list_item_left_margin"
	        android:textAppearance="@style/TextAppearance.CustomFont.Semilight"
	        android:textSize="16sp" />
		</LinearLayout>
</LinearLayout>
